<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:elevation="100dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/details_box_layout_left_right_margin"
        android:layout_marginEnd="@dimen/details_box_layout_left_right_margin"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:paddingBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_money_parameters_layout_height"
            android:layout_marginTop="@dimen/details_category_layout_top_margin"
            android:layout_weight="5"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/details_description_image"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/description_image_background"
                android:padding="5dp"
                android:src="@drawable/category_food" />

            <TextView
                android:id="@+id/details_category"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:fontFamily="@font/roboto_slab"
                android:gravity="center_vertical|start"
                android:text="Category"
                android:textColor="@color/primarytext"
                android:textSize="@dimen/details_category_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_marginTop="@dimen/details_money_parameters_layout_top_margin"
            android:background="@color/divider_color_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_money_parameters_layout_height"
            android:layout_marginTop="@dimen/details_money_parameters_layout_top_margin"
            android:layout_weight="5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:fontFamily="roboto_slab"
                android:gravity="center_vertical|start"
                android:text="@string/Title"
                android:textColor="@color/color_black_intensity_1"
                android:textSize="@dimen/details_money_parameters_text_size" />

            <TextView
                android:id="@+id/details_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                android:fontFamily="roboto_slab"
                android:gravity="center_vertical|start"
                android:text="@string/Title"
                android:textColor="@color/primarytext"
                android:textSize="@dimen/details_money_parameters_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_money_parameters_layout_height"
            android:layout_marginTop="@dimen/details_money_parameters_layout_top_margin"
            android:layout_weight="5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:fontFamily="roboto_slab"
                android:gravity="center_vertical|start"
                android:text="@string/Date"
                android:textColor="@color/color_black_intensity_1"
                android:textSize="@dimen/details_money_parameters_text_size" />

            <TextView
                android:id="@+id/details_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                android:fontFamily="roboto_slab"
                android:gravity="center_vertical|start"
                android:text="@string/Date"
                android:textColor="@color/primarytext"
                android:textSize="@dimen/details_money_parameters_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_money_parameters_layout_height"
            android:layout_marginTop="@dimen/details_money_parameters_layout_top_margin"
            android:layout_weight="5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:fontFamily="roboto_slab"
                android:gravity="center_vertical|start"
                android:text="@string/Amount"
                android:textColor="@color/color_black_intensity_1"
                android:textSize="@dimen/details_money_parameters_text_size" />

            <TextView
                android:id="@+id/details_amount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                android:fontFamily="roboto_slab"
                android:gravity="center_vertical|start"
                android:text="@string/Amount"
                android:textColor="@color/primarytext"
                android:textSize="@dimen/details_money_parameters_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_money_parameters_layout_height"
            android:layout_marginTop="@dimen/details_money_parameters_layout_top_margin"
            android:layout_weight="5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:fontFamily="roboto_slab"
                android:gravity="center_vertical|start"
                android:text="Type"
                android:textColor="@color/color_black_intensity_1"
                android:textSize="@dimen/details_money_parameters_text_size" />

            <TextView
                android:id="@+id/details_type"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                android:fontFamily="roboto_slab"
                android:gravity="center_vertical|start"
                android:text="Type"
                android:textColor="@color/primarytext"
                android:textSize="@dimen/details_money_parameters_text_size" />
        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>